--- a/iceprod/server/data/www_templates/dataset_detail.html
+++ b/iceprod/server/data/www_templates/dataset_detail.html
@@ -9,16 +9,17 @@
   <a href="/config?dataset_id={{ dataset['dataset_id'] }}">View Config</a><span style="width:2.5em;display:inline-block"> </span>
   <a href="/config?edit=1&dataset_id={{ dataset['dataset_id'] }}">Edit Config</a>
 </div>
-<div class="dataset_details">
+<h2>Settings</h2>
+<table class="settings key_value">
 {% for k in dataset %}
-<div>
-  <div style="display:inline;width:40px">{{ k }}</div>
-  <div style="display:inline;width:40px">{{ dataset[k] }}</div>
-</div>
+<tr>
+    <td class="key">{{ k }}</td>
+    <td class="value">{{ dataset[k] }}</td>
+</tr>
 {% end %}
-</div>
+</table>
 
-<h3>Tasks</h3>
+<h2>Tasks</h2>
 
 <div class="tasks">
 {% for s in tasks %}
