--- a/iceprod/server/data/www_templates/main.html
+++ b/iceprod/server/data/www_templates/main.html
@@ -6,10 +6,10 @@
 
 {% block body %}
 
-{% for s in status %}
+{% for s in datasets %}
 <div>
   <div style="display:inline;width:40px"><a href="/dataset?status={{ url_escape(s) }}">{{ s }}</a></div>
-  <div style="display:inline;width:40px">{{ status[s] }}</div>
+  <div style="display:inline;width:40px">{{ datasets[s] }}</div>
 </div>
 {% end %}
 
