--- a/iceprod/server/data/www_templates/dataset_detail.html
+++ b/iceprod/server/data/www_templates/dataset_detail.html
@@ -4,24 +4,9 @@
 
 {% block sidebar %}
 <div class="section">
-    <h3>Filters</h3>
-    <div class="indent">
-        <h4>By Status:</h4>
-        <div class="indent">
-            <select>
-            </select>
-        </div>
-        <h4>By Grid:</h4>
-        <div class="indent">
-            <select>
-            </select>
-        </div>
-        <button>Update</button>
-    </div>
-</div>
-<div class="esc-separator"></div>
-<div class="section">
-    <h4><a href="/submit">Submit Dataset</a></h4>
+    <h4><a href="/submit">Submit New Dataset</a></h4>
+    <div class="esc-separator"></div>
+    <h4><a href="/submit">Submit Dataset like Current</a></h4>
 </div>
 {% end %}
 
