handle ssl certs in website/nginx better. fix some old things. better logging. closes #1483

--- a/iceprod/server/data/www_templates/dataset_detail.html
+++ b/iceprod/server/data/www_templates/dataset_detail.html
@@ -14,8 +14,8 @@
 
 {% block body %}
 <div style="margin-bottom:1em">
-  <a href="/config?dataset_id={{ dataset['dataset_id'] }}">View Config</a><span style="width:2.5em;display:inline-block"> </span>
-  <a href="/config?edit=1&dataset_id={{ dataset['dataset_id'] }}">Edit Config</a>
+  <a href="/config?dataset_id={{ dataset_id }}">View Config</a><span style="width:2.5em;display:inline-block"> </span>
+  <a href="/config?edit=1&dataset_id={{ dataset_id }}">Edit Config</a>
 </div>
 <h2>Settings</h2>
 <table class="settings key_value">
