Started Site page. Defined page instead of all white for base.html

--- a/iceprod/server/data/www_templates/base.html
+++ b/iceprod/server/data/www_templates/base.html
@@ -16,6 +16,7 @@
 <!--[if lt IE 9]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
+    <div class = "page">
     <header>
         <span class="title">IceProd</span>
         <nav class="menu">
@@ -36,6 +37,7 @@
         </div>
     </div>
     <footer>{% block footer %}IceProd {{ version }}{% end %}</footer>
+    </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
     <script src="/static/util.js"></script>
