Make 'IceProd' link to home page

--- a/iceprod/server/data/www_templates/base.html
+++ b/iceprod/server/data/www_templates/base.html
@@ -18,7 +18,7 @@
 <![endif]-->
     <div class = "page">
     <header>
-        <span class="title">IceProd</span>
+        <a href="/" class="title">IceProd</a>
         <nav class="menu">
             <a href="#" id="menu-icon"><span> </span><span> </span><span> </span></a>
             <ul>
