--- a/iceprod/server/data/www_templates/base.html
+++ b/iceprod/server/data/www_templates/base.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>{% block title %}Default title{% end %}</title>
     <meta name="description" content="IceProd: a grid middleware for submitting and tracking sets of jobs.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
