Add config string to site page

--- a/iceprod/server/data/www_templates/site.html
+++ b/iceprod/server/data/www_templates/site.html
@@ -17,6 +17,10 @@
     {% end %}
 
 </ul>
+<p contentEditable="true" class="code" >
+{{ config }}
+</p>
+
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script type="text/javascript" src="/static/json-rpc.js"></script>
 <script type="text/javascript">
