--- a/iceprod/server/data/www_templates/main.html
+++ b/iceprod/server/data/www_templates/main.html
@@ -114,7 +114,7 @@ jQuery(document).ready(function() {
             }]
         };
         var settings = {
-            animate: false,
+            animation: false,
             showTooltips: false,
             scaleShowGridLines: false,
             scaleShowVerticalLines: false,
