Added macro legend to submit

--- a/iceprod/server/data/www_templates/submit.html
+++ b/iceprod/server/data/www_templates/submit.html
@@ -12,6 +12,14 @@
 {% block page_title %}Submit{% end %}
 
 {% block body %}
+<div class = "sidebox">
+<h3>Macro Legend</h3>
+<ul>
+    <li>$(job) - The job index</li>
+    <li>$(jobs_submitted) - number of jobs submitted</li>
+    <li>$(dataset) - the dataset_id</li>
+</ul>
+</div>
 <div id="submit_area">Enable javsascript to submit datasets.</div>
 
 <div id="error"></div>
