--- a/iceprod/server/data/www_templates/task_browse.html
+++ b/iceprod/server/data/www_templates/task_browse.html
@@ -5,6 +5,18 @@
 {% block page_title %}Tasks by Status{% end %}
 
 {% block body %}
+<ul>
+{% for t in tasks %}
+    <li>
+        <a href="/task/{{ t }}">{{ tasks[t]['task_id'] }}</a>
+        <a href='javascript:call("reset_task");'>Reset</a>
+        <a href='javascript:call("resume_task");'>Resume</a>
+        <a href='javascript:call("suspend_task");'>Suspend</a>
+    </li>
+{% end %}
+</ul>
+
+<!--
 <table>
 <tr>
 {% if tasks %}
@@ -29,5 +41,17 @@
 </tr>
 {% end %}
 </table>
+-->
+{% end %}
 
+{% block body_scripts %}
+<script type="text/javascript" src="/static/json-rpc.js"></script>
+<script type="text/javascript">
+
+function call(func_name){
+    RPCclient('reset_task', {passkey: "{{ passkey }}", task:'1' }, callback=function(return_data){
+        
+    });
+};
+</script>
 {% end %}
