Added login/logout to menu

--- a/iceprod/server/data/www_templates/base.html
+++ b/iceprod/server/data/www_templates/base.html
@@ -26,6 +26,12 @@
             <li{% if section == 'site' %} class="current"{% end %}>{% if (not sites) and site_id %}<a href="/site/{{ site_id }}">Site</a>{% else %}<a href="/site">Sites</a>{% end %}</li>
             <li{% if section == 'util' %} class="current"{% end %}><a href="/help">Help</a></li>
             {% if (not master) and master_url %}<li class="master"><a href="{{ master_url }}">Master</a></li>{% end %}
+            <li>
+                {% if (not current_user) %} <a href='/login'>Login </a>
+                {% else %} <a href='/logout'>Logout </a> 
+                {% end %}
+            </li>
+            </ul>
         </nav>
     </header>
     <div class="body {{ section.lower().replace(' ','_') }}">
