Mixed public/private pages

--- a/iceprod/server/data/www_templates/task_browse.html
+++ b/iceprod/server/data/www_templates/task_browse.html
@@ -9,9 +9,11 @@
 {% for t in tasks %}
     <li>
         <a href="/task/{{ t }}">{{ tasks[t]['task_id'] }}</a>
+        {% if (current_user) %}
         <a href='javascript:call("reset_task", "{{ tasks[t]['task_id'] }}");'>Reset</a>
         <a href='javascript:call("resume_task", "{{ tasks[t]['task_id'] }}");'>Resume</a>
         <a href='javascript:call("suspend_task", "{{ tasks[t]['task_id'] }}");'>Suspend</a>
+        {% end %}
     </li>
 {% end %}
 </ul>
@@ -45,13 +47,15 @@
 {% end %}
 
 {% block body_scripts %}
+
+{% if (current_user) %}
 <script type="text/javascript" src="/static/json-rpc.js"></script>
 <script type="text/javascript">
-
 function call(func_name, task){
     RPCclient(func_name, {passkey: "{{ passkey }}", task:task }, callback=function(return_data){
 
     });
 };
+{% end %}
 </script>
 {% end %}
