--- a/iceprod/server/data/www_templates/task_detail.html
+++ b/iceprod/server/data/www_templates/task_detail.html
@@ -21,11 +21,15 @@
   </div>
 </div>
 {% end %}
+
+{% if (current_user) %}
 <div style="padding:10px;">
     <a href='javascript:call("reset_task");'>Reset</a>
     <a href='javascript:call("resume_task");'>Resume</a>
     <a href='javascript:call("suspend_task");'>Suspend</a>
 </div>
+{% end %}
+
 </div>
 
 {% for k in logs %}
@@ -38,15 +42,16 @@
 {% end %}
 
 {% block body_scripts %}
+
+{% if (current_user) %}
 <script type="text/javascript" src="/static/json-rpc.js"></script>
 <script type="text/javascript">
-
     var task = "{{ task['task_id'] }}";
-
     function call(func_name){
         RPCclient(func_name, {passkey: "{{ passkey }}", task:task }, callback=function(return_data){
-
                   });
     };
 </script>
+{% end %}
+
 {% end %}
