--- a/iceprod/server/data/www_templates/login.html
+++ b/iceprod/server/data/www_templates/login.html
@@ -8,6 +8,7 @@
 
 <form action="/login" method="post">
 {% module xsrf_form_html() %}
+  <input type="hidden" name="next" value="{{ next }}" />
   <div style="margin: 1em 0">
     <div>Password: <input type="password" name="pwd" /></div>
     <div style="margin: .2em 0"><input type="submit" value="Sign in" /></div>
