#44: web interface to edit groups

--- a/iceprod/server/data/www_templates/site.html
+++ b/iceprod/server/data/www_templates/site.html
@@ -28,8 +28,9 @@
 {{ config }}
 </p>
 </div>
+{% end %}
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+{% block body_scripts %}
 <script type="text/javascript" src="/static/json-rpc.js"></script>
 <script type="text/javascript">
     
